--- a/bomberman_rl/agent_code/my_agent/test.ipynb
+++ b/bomberman_rl/agent_code/my_agent/test.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-22T23:55:20.825735Z",
-     "start_time": "2021-03-22T23:55:19.241790Z"
+     "end_time": "2021-03-25T20:44:55.335983Z",
+     "start_time": "2021-03-25T20:44:54.081436Z"
     }
    },
    "outputs": [],
@@ -283,6 +283,65 @@
    ],
    "source": [
     "_get_conv_out(c1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-25T20:45:10.667817Z",
+     "start_time": "2021-03-25T20:45:10.654846Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "a = np.ones((7, 7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-25T20:45:11.181668Z",
+     "start_time": "2021-03-25T20:45:11.161695Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "b = -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-25T20:45:11.637024Z",
+     "start_time": "2021-03-25T20:45:11.628047Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1., -1., -1., -1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1., -1., -1., -1.]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
    ]
   },
   {
